tests/NormalTests/paczka1/small_fuzzy/36849924.err
Error in line 2: mTtfXu S274 70,0
Error in line 7: mTtfXu A603 41,48
Error in line 10: Q0P A535 75,9
